[tool.poetry]
name = "thenewboston"
version = "0.2.0"
description = "Python library for thenewboston digital currency"
authors = ["Bucky Roberts <buckyroberts@gmail.com>"]
# TODO(dmu) LOW: Does `maintainers` have correct value?
maintainers = ["Thenewboston"]
license = "MIT"
homepage = "https://github.com/thenewboston-developers/thenewboston-python"
repository = "https://github.com/thenewboston-developers/thenewboston-python"
readme = "README.md"
packages = [
    { include = "thenewboston", from = "src" },
]
# TODO(dmu) MEDIUM: Why we need to include tests in the source distribution like this?
#                   They are not installed to site-packages and do not seem to be runneable
#                   in some other way.
#                   If we need tests to be packaged and runneable from package then we need
#                   to move them to src/thenewboston and have "dev" extra in source distribution
#                   setup.py
include = ["LICENSE", "CHANGE.rst", "pytest.ini", "tests"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.1.7"
PyNaCl = ">=1.4.0"
django-redis = ">=4.12.1"
djangorestframework = ">=3.12.2"
# TODO(dmu) LOW: Consider moving `factory-boy` to dev dependencies
factory-boy = ">=3.2.0"
requests = ">=2.25.1"

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4"
flake8-bugbear = ">=20.11.1"
flake8-builtins = ">=1.5.3"
flake8-coding = ">=1.3.2"
flake8-docstrings = ">=1.5.0"
flake8-import-order = ">=0.18.1"
flake8-polyfill = ">=1.0.2"
flake8-quotes = ">=3.2.0"
pytest = ">=6.2.2"
pytest-asyncio = ">=0.14.0"
pytest-cov = ">=2.11.1"
pytest-django = ">=4.1.0"
pytest-xdist = ">=2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
