[metadata]
name = thenewboston
url = https://github.com/thenewboston-developers/thenewboston-python

license = MIT
author = Bucky Roberts
author_email = buckyroberts@gmail.com
maintainer = Thenewboston
long_description = file: README.md
long_description_content_type = text/x-md

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    src
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
ignore = D203,D101,D400,D401,D106,W503,F403,F405,E501,D403,D104,C101,D100,D105,D103,D102
exclude =
    .git,
    __pycache__,
    .venv,
filename = *.py
application-import-names =
    thenewboston
accept-encodings = utf-8,utf-16
import-order-style = pycharm
inline-quotes = single
max-complexity = 12
max-line-length = 120
max-linenumber = 500
multiline-quotes = double
